--- a/lib/app/core/utils/l10n/app_en.arb
+++ b/lib/app/core/utils/l10n/app_en.arb
@@ -18,5 +18,33 @@
     "settings" : "Settings",
     "@settings": {
         "description": "settings text"
+    },
+     "monday" : "Monday",
+    "@monday": {
+        "description": "week day"
+    },
+     "tuesday" : "Tuesday",
+    "@tuesday": {
+        "description": "week day"
+    },
+     "wednesday" : "Wednesday",
+    "@wednesday": {
+        "description": "week day"
+    },
+     "thurday" : "Thursday",
+    "@thurday": {
+        "description": "week day"
+    },
+     "friday" : "Friday",
+    "@friday": {
+        "description": "week day"
+    },
+     "saturday" : "Saturday",
+    "@saturday": {
+        "description": "week day"
+    },
+     "sunday" : "Sunday",
+    "@sunday": {
+        "description": "settings text"
     }
 }
