--- a/lib/app/core/utils/l10n/app_pt.arb
+++ b/lib/app/core/utils/l10n/app_pt.arb
@@ -23,6 +23,7 @@
     "machine": "Maquina",
     "delete": "Delete",
     "edit": "Edit",
-    "what_would_you_like_to_do": "O que deseja fazer ?"
+    "what_would_you_like_to_do": "O que deseja fazer ?",
+    "dark_mode": "Modo Escuro"
 
 }
