Renaming and adding text mask

--- a/lib/app/core/utils/l10n/app_en.arb
+++ b/lib/app/core/utils/l10n/app_en.arb
@@ -51,9 +51,9 @@
     "@sunday": {
         "description": "settings text"
     },
-    "repetitions" : "Repetitions",
-    "@repetitions": {
-        "description": "Repetitions text"
+    "sets" : "Sets",
+    "@sets": {
+        "description": "Sets text"
     },
     "series" : "Series",
     "@series": {
