--- a/lib/app/core/utils/l10n/app_pt.arb
+++ b/lib/app/core/utils/l10n/app_pt.arb
@@ -12,17 +12,16 @@
     "friday" : "Sexta",
     "saturday" : "Sábado",
     "sunday" : "Domingo",
-    "repetitions" : "Repetitions",
-    "series" : "Series",
-    "rest_time" : "Rest time",
+    "sets" : "Repetições",
+    "rest_time" : "Descanso",
     "name" : "Nome",
     "observations" : "Observação",
     "weight" : "Peso",
     "save" : "Salvar",
     "picture": "Foto",
-    "machine": "Maquina",
-    "delete": "Delete",
-    "edit": "Edit",
+    "machine": "Máquina",
+    "delete": "Deletar",
+    "edit": "Editar",
     "what_would_you_like_to_do": "O que deseja fazer ?",
     "dark_mode": "Modo Escuro"
 
