--- a/lib/app/core/utils/l10n/app_pt.arb
+++ b/lib/app/core/utils/l10n/app_pt.arb
@@ -12,7 +12,8 @@
     "friday" : "Sexta",
     "saturday" : "Sábado",
     "sunday" : "Domingo",
-    "sets" : "Repetições",
+    "sets" : "Series",
+    "reps" : "Repetições",
     "rest_time" : "Descanso",
     "name" : "Nome",
     "observations" : "Observação",
