fixing darkMode bug

--- a/lib/app/core/utils/l10n/app_en.arb
+++ b/lib/app/core/utils/l10n/app_en.arb
@@ -3,6 +3,10 @@
     "@language" : {
         "description": " The current language"
     },
+    "language_text" : "Language",
+    "@language_text" : {
+        "description": " Language text"
+    },
     "workout": "Workout",
     "@workout": {
         "description": "Workout text"
