--- a/lib/app/core/utils/l10n/app_pt.arb
+++ b/lib/app/core/utils/l10n/app_pt.arb
@@ -1,5 +1,6 @@
 {   
     "language" : "portugues",
+    "language_text" : "Idioma",
     "workout" : "Treino",
     "new_workout" : "Novo Treino",
     "home" : "inicio",
